<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">edeiloan guide</string>
    <string name="loan_amount">loan Guide Amount</string>
    <string name="rate">Interest Rate</string>
    <string name="ten_year">10 year</string>
    <string name="fifteen_year">15 year</string>
    <string name="thirty_year">30 year</string>
    <string name="five_percent">5%</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="term">Term</string>
    <string name="zero">0.00</string>
    <string name="years_grow">Years to grow</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="current_principle">Current Principle</string>
    <string name="annual_addition">Annual Addition</string>
    <string name="annual_compound">Number of times compounded annually</string>
    <string name="calculate">Calculate</string>
    <string name="total">Total:</string>
    <string name="compoundInterest_end">Make additions to</string>
    <string name="end">end</string>
    <string name="start">start</string>
    <string name="compoundInterest_begin">of compounding period.</string>
    <string name="compoundInterestWithAnnualAdd">Compound interest with annual additions</string>
    <string name="annual_comp_int">Annual Compound Interest</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="continuously_compound">Continuously Compounded Interest</string>
    <string name="continue_next">Continue</string>
    <string name="load">View Files</string>
    <string name="deletion">Delete File</string>
    <string name="save">Save File</string>
    <string name="file_name">File Name</string>
    <string name="choice">Select A Choice:</string>
    <string name="menu_image">Dollar Symbol</string>
    <string name="a1">"* Go to the EPFO website and click Activate UAN corner of the page. on the bottom-right Key in your UAN, name, date of birth, mobile number, and the captcha text. Then click Get Authorization Pin. * You will now get a one-time password (OTP) on your mobile number. Copy it. * Verify all the details on the EPFO page, and tick the check-box next to I Agree.

 * Paste the OTP from your phone next to Enter OTP and click Validate OTP and Activate UAN.

 * This will activate your UAN and the password will be sent to your mobile number.

 * You will still need to wait for six hours before you can log in to the EPFO portal to check PF balance.

 * Six hours after activating UAN, you can check PF balance."</string>
    <string name="a10">* Helpline number solve your query related EPF by just giving a call on a toll free number 1800118005</string>
    <string name="a11">"* View all Tender Notifications issued by Employees Provident Fund Organization.

 * Search live eProcurement business opportunities available in EPFO Tenders section.

 * Employees Provident Fund Organization Tenders are further filtered by Bid Submission Date, Tender Value, Project Location &amp; Product Category o Get email alert on Tenders from Employees Provident Fund Organization - (EPFO)."</string>
    <string name="a12">"* of Visit the EPFO website and click on the Locate an EPFO Office option.

 * oso alternatively, click on the link http: // search.epfoservices.org:81/locate_office / office_location.php to find EPFO offices directly.

 * In case you want to know the EPF office having jurisdiction over address, select the first option. an Now select your state or union territory from the drop down list and select the district where you want to locate the EPF office. Results will be displayed containing the details of the regional office and the office under whose administrative control the office is operating. In case you want to know the jurisdiction of an EPF office, then click on the second option and select the office from the drop down menu and click on the submit button.

 * The result displayed contains the complete address of the office ande-mail address of concerned authorities Results are displayed on the screen mentioning the state, district, jurisdiction area and the jurisdiction status of the office. "</string>
    <string name="a2">"* Log in to the EPFO website and click on the Our Services tab • Choose the For Employees option from the drop down menu. On the login page, enter the username which is the UAN and password to log in.

 * Once logged in, employees can access their EPF details. Click on the respective passbook to check your EPF balance with different employers."</string>
    <string name="a3">"* The individual must be a part of the EPF scheme to be eligible for EPS. The employee does not contribute towards EPS, only the employer does. o Depending upon the employees age and duration of service, he / she will be able to withdraw the EPS amount, or it can be carried forward to their next job. In case an individual changes jobs, only the EPF will be transferred to the new employer, the EPS will not be transferred.

 * EPS contributions stay with Employees' Provident Fund Organization ( EPFO ) if an employee changes his / her job."</string>
    <string name="todo">todo</string>
    <string-array name="description">

        <item>"क्या आज से 10 साल पहले किसी ने यह सोचा होगा की कुछ समय बाद आधार कार्ड से loan Guide मिल
            सकता है ? अब यह संभव है। कारोबारियों को अब आधार कार्ड से बिजनेस लोन मिल सकता है। केंद्र सरकार द्वारा ऐसी व्यवस्था कर दी गई है। अब व्यापार लोन लेना बहुत ही आसान हो गया है। भारत में Loanलेने वालों की प्रोफाइल देखे तो सबसे अधिक लोन व्यापारी, किसान और युवा ही लेते हैं। इन प्रोफाइल का भी विस्तार से विश्लेषण करें कई बातें निकल कर आती हैं। व्यापारियों में भी कई कैटेगरी होती है। माइक्रो बिजनेसमैन, मिडिल स्तर के कारोबारी और बड़े व्यापारी।

कारोबारी बिजनेस लोन के जरिए कारोबार का विस्तार करते हैं। किसान, लोन की रकम से खेती के सामान खरीदते हैं और युवा लोन से कुछ नया बिजनेस शुरु करते हैं। इस तरह देखा जाए तो लोन की अपनी एक खास अहमियत है। एक खास जरूरत है।"</item>


        <item>सरकार द्वारा लोन की योजनाएं तो शुरु कर दिया लेकिन कई बार ऐसा देखा गया की कई तरह की कागज़ी जरूरतों और औपचारिकता के चलते लोगों को loan Guide मिलने में दिक्कतों का सामना करना पड़ता है।

लोन मिलने में दिक्कत को दूर करने के लिए और लोन आसान तरीके उपलब्ध कराने के लिए loan Guide की व्यवस्था ऑनलाइन देने के लिए आधार कार्ड से जोड़ दिया। मतलब आधार कार्ड से बिजनेस के लिए लोन प्रदान किया जाने लगा है। Online तरीके  से बिजनेस लोन देने का सबसे बड़ा फ़ायदा यह हुआ कि लोन का लाभ अधिक से अधिक लोगों को प्राप्त होना शुरु हो गया।</item>


        <item>"आधार कार्ड से लोन के प्रकार के लोन दिए जाते हैं:

कारोबार के लिए ऋण
होम लोन– आधार कार्ड से होम लोन
पर्सनल लोन– आधार कार्ड से पर्सनल ऋण
घरेलू उपयोग के लिए लोन– आधार कार्ड से बिजनेस loan Guide"</item>

        <item>Aadhar card से लोन लेने की योग्यता की बात करें तो यह कुछ इस तरह की होती है:

भारतीय नागरिक होना अनिवार्य है।
अप्लाई करने वाले व्यक्ति के ऊपर किसी और बैंक का लोन नहीं होना चाहिए।
बिजनेस लोन के लिए अप्लाई करने वाले व्यक्ति के पास बैंक पासबुक, आधार कार्ड- aadhar card, पैन कार्ड- pan card होना अनिवार्य रूप से जरूरी है।
लोन के लिए अप्लाई करने वाले व्यक्ति के इतनी आर्थिक क्षमता होनी चाहिए की वह लोन की रकम चुका सके।
Aadhar card से बिजनेस लोन के लिए अप्लाई करने वाले व्यक्ति की उम्र 18 साल से अधिक होनी चाहिए।</item>

        <item>"आधार कार्ड से लोन लेने के लिए आपको सबसे पहले  पर क्लिक करना होगा। यह वेबसाइट आधार हाउसिंग.कॉम की है।

वेबसाइट खुलने के बाद आपको अप्लाई नाऊ पर क्लिक करना होगा। इसके बाद यहां मांगी गई सभी सूचनाएं भरने
            के बाद सबमिट करना होगा। नाम, फोन नंबर, ईमेल आईडी, घर का पता, रोजगार की स्थिति, मासिक आय, जन्मतिथि, फोन करने का सही समय और आधार की नजदीकी शाखा। इतनी जानकारी भरने के बाद आपको अगले पेज पर जाने की अनुमति मिल जाएगी और आप अपना एप्लीकेशन भर सकते हैं।"</item>


        <item>"यह योजना केंद्र सरकार द्वारा शुरु की गई योजना है। इस योजना में सूक्ष्म, लघु एवं मध्यम यानी कारोबारियों (MSME) को बिजनेस के लिए लोन प्रदान किया जाता है। मुद्रा योजना में नया कारोबार शुरु करने के लिए और पुराने कारोबार का विस्तार करने के लिए लोन दिया जाता है।

मुद्रा योजना में लोन लेने के लिए मुद्रा योजना की वेबसाइट  पर जाना होगा। वेबसाइट पर जाने के बाद सबसे पहले खुद के बिजनेस को रजिस्टर करना होता है। रजिस्टर करने के बाद लोन के लिए अप्लाई कर सकते हैं।

मुद्रा योजना के बारे में अधिक जानने के लिए क्लिक करें- मुद्रा योजना में कैसे अप्लाई करते हैं?"</item>

        <item>"बिजनेस लोन आर्थिक प्रोडक्ट है। यानी इसमें पैसों का लेन – देन शामिल होता है। जैसा हम सभी जानते हैं कि जहां पैसों की बात की जाती है वहां पर कागजी लिखा-पढ़ी होना जरूरी हो जाता है। यानी किसने किसको कितना पैसा दिया, क्यों दिया और उस पैसों पर ब्याज कितना शामिल है इत्यादि लिखा जाता है।

दूसरी महत्वपूर्ण बात है कि जब कोई बैंक या कंपनी किसी को पैसा देती है तो यह जानना चाहती है कि वह व्यक्ति कहां का है? क्या करता है? उसमी आमदनी कितनी है? व्यक्ति की प्रॉपर्टी कितनी है इत्यादि। इससे बैंक या लोन कंपनी को यह तय करने में आसानी हो जाती है वह उस व्यक्ति को कितना पैसा लोन के तौर पर प्रदान कर सकती है।

आधार कार्ड किसी भी व्यक्ति का एक परिचय पत्र है। आधार पता प्रमाण पत्र भी है। जब भी बिजनेस लोन या लोन के लिए अप्लाई किया जाता है तब एक परीचय पत्र और पता प्रमाण पत्र की जरूरत पड़ती है। तब आधार कार्ड परिचय पत्र और निवास प्रमाण पत्र के तौर पर काम करता है।

इसके अतिरिक्त व्यक्ति को अपनी इनकम प्रूफ और जरूरत पड़ने पर प्रॉपर्टी प्रूफ के कागजात प्रस्तुत करना पड़ता है। टेक्नोलॉजी के इस दौर यह हो सकता है कि कागजात की फोटोकॉपी न जमा करना पड़े लेकिन कागजात ऑनलाइन अपलोड करना पड़ता है।"</item>


        <item>"लोन के लिए आधार कार्ड एक कागज़ी दस्तावेज है। लोन के लिए इनकम प्रूफ और प्रॉपर्टी प्रूफ के अतिरिक्त परिचय पत्र और निवास प्रमाण पत्र देना होता है। परिचय पत्र और निवास प्रमाण पत्र के लिए आधार कार्ड काम करता है। जहां तक सिर्फ आधार कार्ड पर लोन मिलने की बात तो यह संभव नही है।

हां कुछ बैंक हैं जहां से बिना कुछ गिरवी रखे लोन मिलता है। लेकिन वहां पर भी लोन लेने के लिए उस बैंक में उस ग्राहक का बैंक खाता होना अनिवार्य होता है। इसके अतिरिक्त कुछ ऐसी कंपनियां हैं जहां क्रेडिट लाइन मिलता है। क्रेडिट लाइन एक छोटी रकम होती है। जिसे ऊँचें ब्याज दर पर दिया जाता है।

ऐसे में ये कम्पनियां ग्राहक जहां रहता है उस जगह का अपने कर्मचारियों के जरिये वेरिफिकेशन करवा कर क्रेडिट लाइन के रुप में कुछ रकम लोन के तौर पर प्रदान कर देती हैं।"</item>

    </string-array>
    <string name="example_application">example</string>
    <string name="select">select</string>
    <string name="image">Image</string>
    <string name="document">document</string>
    <string name="perosnal_loan_guide">Perosnal Loan Guide</string>
    <string name="ad">Ad</string>
</resources>