<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dip">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:elevation="6dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/m2"
                    tools:ignore="ContentDescription"
                    android:contentDescription="@string/todo" />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/firstLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/example_application"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/secondLine"
                    android:layout_width="fill_parent"
                    android:layout_height="26dip"
                    android:ellipsize="marquee"
                    android:text="@string/description"
                    android:textSize="12sp"
                    android:singleLine="true" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</RelativeLayout>