<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details">

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:padding="8.0dip">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
             android:src="@drawable/ic_right_arrow"
            app:tint="#ffffffff"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10.0dip"
            android:text="@string/perosnal_loan_guide"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ads1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="10.0dip"
        android:gravity="center" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/tvNext"
        android:layout_below="@+id/ads1"
        android:layout_marginTop="10.0dip"
        android:padding="5.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:padding="5.0dip"
                android:textColor="#ff000000"
                android:textSize="16.0sp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/tvNext"
        android:layout_width="fill_parent"
        android:layout_height="70.0dip"
        android:padding="5.0dip"
        android:layout_above="@id/banner_container"
        android:src="@drawable/docdetails"
        android:visibility="visible"
        android:contentDescription="@string/document" />

    <RelativeLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:minHeight="50dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" />
</RelativeLayout>